--- a/css/contact.css
+++ b/css/contact.css
@@ -59,9 +59,10 @@
     width: 100%;
     height:700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-8.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: bottom;
   }
   .content-fixed-width {
     width: 1000px;
@@ -188,7 +189,7 @@
     width: 1020px;
     height:700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-8.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
