--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -60,7 +60,7 @@
     width: 100%;
     height: 700px;
     padding-top: 130px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -216,7 +216,7 @@
     width: 1020px;
     height: 700px;
     padding-top: 130px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
