--- a/css/committees.css
+++ b/css/committees.css
@@ -60,7 +60,7 @@
     width: 100%;
     height: 700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-new.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -197,7 +197,7 @@
     width: 1020px;
     height: 700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-new.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
