--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -48,6 +48,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -81,16 +87,15 @@
     margin-left: 75px;
     margin-right: 50px;
     padding-top: 65px;
-    border: 1px solid rgba(0,0,255,0.1);
+    border: 1px solid rgba(255,255,255,1);
     border-radius: 5px;
-    background-color: rgba(0,0,255,0.1);
+    background-color: rgba(255,255,255,1);
     cursor: pointer;
     font-size: 15px;
   }
 
   .hover:hover {
     margin-top: 60px;
-    background-color: (0,255,255,0.1);
   }
 
   .aboutSVVVMUN {
@@ -100,10 +105,10 @@
     display: inline-block;
     margin-top: 65px;
     padding-top: 65px;
-    border: 1px solid rgba(0,0,255,0.1);
+    border: 1px solid rgba(255,255,255,1);
     border-radius: 5px;
     cursor: pointer;
-    background-color: rgba(0,0,255,0.1);
+    background-color: rgba(255,255,255,1);
     font-size: 15px;
   }
 
@@ -204,6 +209,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -237,15 +248,14 @@
     margin-left: 75px;
     margin-right: 50px;
     padding-top: 65px;
-    border: 1px solid rgba(0,0,255,0.1);
+    border: 1px solid rgba(255,255,255,1);
     border-radius: 5px;
-    background-color: rgba(0,0,255,0.1);
+    background-color: rgba(255,255,255,1);
     cursor: pointer;
   }
 
   .hover:hover {
     margin-top: 60px;
-    background-color: rgba(0,255,255,0.1);
   }
 
   .aboutSVVVMUN {
@@ -255,10 +265,10 @@
     display: inline-block;
     margin-top: 65px;
     padding-top: 65px;
-    border: 1px solid rgba(0,0,255,0.1);
+    border: 1px solid rgba(255,255,255,1);
     border-radius: 5px;
     cursor: pointer;
-    background-color: rgba(0,0,255,0.1);
+    background-color: rgba(255,255,255,1);
   }
 
   #aboutBoth {
