--- a/css/committees.css
+++ b/css/committees.css
@@ -48,6 +48,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -60,7 +66,7 @@
     width: 100%;
     height: 700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-new.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -79,12 +85,12 @@
     margin-left: 25px;
     margin-right: 25px;
     margin-top: 65px;
-    background-color: rgba(230,230,230,0.5);
+    background-color: rgba(255,255,255,1);
     cursor: pointer;
   }
 
   .committees-name:hover {
-    background-color: rgba(255,0,255,0.1);
+    background-color: rgba(255,255,255,0.8);
   }
 
   #info {
@@ -184,6 +190,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -197,7 +209,7 @@
     width: 1020px;
     height: 700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-new.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -216,12 +228,12 @@
     margin-left: 25px;
     margin-right: 25px;
     margin-top: 65px;
-    background-color: rgba(230,230,230,0.5);
+    background-color: rgba(255,255,255,1);
     cursor: pointer;
   }
 
   .committees-name:hover {
-    background-color: rgba(255,0,255,0.1);
+    background-color: rgba(255,255,255,0.8);
   }
 
   #info {
