--- a/css/contact.css
+++ b/css/contact.css
@@ -48,6 +48,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -59,7 +65,7 @@
     width: 100%;
     height:700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-8.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -78,7 +84,7 @@
     height: 100px;
     margin: 0 auto;
     cursor: pointer;
-    background-color: rgba(230,230,230,0.5);
+    background-color: rgba(255,255,255,1);
     border-radius: 50px;
     padding-top: 35px;
     font-size: 10px;
@@ -98,7 +104,7 @@
   }
 
   .key-contacts:hover {
-    background-color: rgba(0,0,255,0.1);
+    background-color: rgba(255,255,255,0.8);
   }
 
   #backButton {
@@ -178,6 +184,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -189,7 +201,7 @@
     width: 1020px;
     height:700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-8.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -207,7 +219,7 @@
     height: 100px;
     margin: 0 auto;
     cursor: pointer;
-    background-color: rgba(230,230,230,0.5);
+    background-color: rgba(255,255,255,1);
     border-radius: 50px;
     padding-top: 35px;
     font-size: 10px;
@@ -227,7 +239,7 @@
   }
 
   .key-contacts:hover {
-    background-color: rgba(0,0,255,0.1);
+    background-color: rgba(255,255,255,0.8);
   }
 
   #backButton {
