--- a/css/resources.css
+++ b/css/resources.css
@@ -48,6 +48,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -59,7 +65,7 @@
     width: 100%;
     height: 700px;
     padding-top: 120px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -78,12 +84,12 @@
     width: 220px;
     height: 220px;
     border-radius: 110px;
-    background-color: rgba(230,230,230,0.5);
+    background-color: rgba(255,255,255,1);
     padding-top: 90px;
   }
 
   .resources-div:hover {
-    background-color: rgba(255,0,0,0.1);
+    background-color: rgba(255,255,255,0.8);
   }
   /*Start of footer*/
   footer {
@@ -150,6 +156,12 @@
     font-family: Raleway;
   }
 
+  .active {
+    background-color: rgba(0,0,255,0.1);
+    color:#3AA9F5;
+    border-radius: 10px;
+  }
+
   #nav-logo {
     padding-top: 20px;
     float: left;
@@ -160,7 +172,7 @@
     width: 1020px;
     height: 700px;
     padding-top: 46px;
-    background-image: url(../bg/bg-1.jpg);
+    background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -169,7 +181,6 @@
     height: 500px;
     margin: 0 auto;
     text-align: center;
-    padding-top: 140px;
   }
 
   .resources-div{
@@ -179,12 +190,13 @@
     width: 220px;
     height: 220px;
     border-radius: 110px;
-    background-color: rgba(230,230,230,0.5);
+    background-color: rgba(255,255,255,1);
     padding-top: 90px;
+    margin-top: 140px;
   }
 
   .resources-div:hover {
-    background-color: rgba(255,0,0,0.1);
+    background-color: rgba(255,255,255,0.8);
   }
   /* start of footer*/
   footer {
