--- a/css/messages.css
+++ b/css/messages.css
@@ -231,9 +231,9 @@
 
   .content {
     font-family: 'Neuton', serif;
-    width: 1020;
+    width: 1020px;
     height: 700px;
-    padding-top: 120px;
+    padding-top: 46px;
     background-image: url(../bg/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -249,7 +249,7 @@
   .messageViceChancellor {
     width: 300px;
     height: 250px;
-    float: left;
+    display: inline-block;
     background-color: rgba(255,255,255,1);
     border: 1px solid rgba(255,255,255,1);
     border-radius: 5px;
@@ -263,7 +263,7 @@
   .messageConvener {
     width: 300px;
     height: 250px;
-    float: left;
+    display: inline-block;
     background-color: rgba(255,255,255,1);
     border: 1px solid rgba(255,255,255,1);
     border-radius: 5px;
@@ -276,7 +276,7 @@
   .messageFaculty {
     width: 300px;
     height: 250px;
-    float: left;
+    display: inline-block;
     background-color: rgba(255,255,255,1);
     border: 1px solid rgba(255,255,255,1);
     border-radius: 5px;
